# snn-jepa

./: .gitignore  POC_launcher.ipynb  README.md  data_analysis.py  download_vis_b.py  project_overview.md  proof_of_concept.py  proof_of_concept_edit.py  pyproject.toml  requirements.txt  requirementst.txt  test_snn_distillation.py  todo.md
.claude/: settings.local.json
documentations/AllenSDK-References/: 00_README.md  01_dataset_overview.md  02_quality_metrics.md  03_analysis_workflows.md  04_waveform_physiology.md  05_behavioral_alignment.md
documentations/Project-Information/: LeJEPA_implementation_doc.md  colab_run_guide.md  project_overview.md
experiments/: README.md
experiments/data/: README.md  create_dataset.py  data_analysis.py  verify_dataset.py
experiments/multi_session/: README.md  ablation.ipynb  multi_session.py  multi_session_runner.ipynb  multi_session_runner_local_backup.ipynb
experiments/single_session/: README.md
jepsyn/: __init__.py
jepsyn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jepsyn/data/: __init__.py  data_handler.py  dataset.py  preprocess.py
jepsyn/losses/: __init__.py  distillation.py  lejepa.py
jepsyn/models/: __init__.py  encoder.py  mae_ssl.py  predictor.py
jepsyn/plots/: model_performance.py  neural_activity.py  raster.py  training.py
jepsyn/utils/: __init__.py  config_helper.py  evaluation.py  training.py
scripts/: proof_of_concept.py
src/: __init__.py
src/data/: data_handler.py  download_vis_b.py  preprocess.py
src/losses/: distillation.py  lejepa.py
temp_tests/: binning_test.py
(+22 files in other folders)
