[build-system]
requires = ["setuptools >= 68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jepsyn"
version = "0.1.0"
description = "To be implemented"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "snntorch>=0.9",
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "scikit-learn>=1.2",
    "allensdk>=2.16",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jepsyn*"]